updated resume link and fixed lightbox top-margin on small displays

--- a/src/assets/sass/_image-gallery.scss
+++ b/src/assets/sass/_image-gallery.scss
@@ -46,6 +46,6 @@
   img {
     max-width: 860px;
     max-height:600px;
-    margin-top:10%;
+    margin-top:7vh;
   }
 }
